# get_spark

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  SECURITY.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci.yml  release.yml
.kiro/steering/: 00-vision.md  01-system-design.md  02-security.md  03-platforms.md  04-visual-language.md  05-roadmap.md
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/privacy/: page.tsx
components/: KeystoreBootstrap.tsx  PWAInstaller.tsx  SparkLogo.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Welcome.tsx
components/chat/: AttachmentChip.tsx  ChatSidebar.tsx  ChatWindow.tsx  CodeBlock.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageInput.tsx  ModelSelector.tsx  SpeakButton.tsx  TypingIndicator.tsx  VoiceButton.tsx
components/settings/: AboutPanel.tsx  ApiKeyPanel.tsx  ConnectionsPanel.tsx  LanguagePanel.tsx  ModelPanel.tsx  PromptPanel.tsx  SettingsModal.tsx  VoicePanel.tsx
components/ui/: Modal.tsx
components/workspace/: RepoContextChip.tsx
extension-chrome/: manifest.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
extension-chrome/src/: background.ts  content.ts  (+2 more)
extension-vscode/: package.json  tsconfig.ext.json
i18n/: request.ts
lib/: chatClient.ts  fileContext.ts  github.ts  keystore.ts  store.ts  stream.ts  types.ts  utils.ts  version.ts  voice.ts
messages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  pt.json  ru.json  zh.json
mobile-shell/: capacitor.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
public/: manifest.json  sw.js
scripts/: generate-icons.py  generate-og.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+24 files in other folders)
