[package]
name = "spark"
version = "0.1.0"
description = "Spark — AI chat for code, trends & style"
authors = ["Spark"]
edition = "2021"
rust-version = "1.77"

# Tauri 2 splits the binary into a thin main.rs that delegates to a lib crate so
# the same code can target desktop (lib + bin) and mobile (lib only).
[lib]
name = "spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"   # optimize for size — keeps the installer tiny
strip = true
