[package]
name = "spark"
version = "0.2.1"
description = "Spark — AI chat for code, trends & style"
authors = ["Spark"]
edition = "2021"
rust-version = "1.77"

# Tauri 2 splits the binary into a thin main.rs that delegates to a lib crate so
# the same code can target desktop (lib + bin) and mobile (lib only).
[lib]
name = "spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DeepSeek streaming over HTTPS — rustls keeps the bundle portable
# (no OpenSSL system deps) and tiny.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"   # optimize for size — keeps the installer tiny
strip = true
